--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "mongodb": "~1.4.15",
+    "express-session": "1.9.1",
+    "connect-mongo": "0.4.1",
+    "connect-flash": "0.1.1"
   }
 }
