--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
-    "mongodb": "~1.4.15",
+    "mongodb": "latest",
     "express-session": "1.9.1",
-    "connect-mongo": "0.4.1",
+    "connect-mongo": "latest",
     "connect-flash": "0.1.1"
   }
 }
