--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "1.9.1",
     "connect-mongo": "latest",
     "connect-flash": "0.1.1",
-    "markdown": "^0.5.0"
+    "markdown": "^0.5.0",
+    "multer": "0.1.6"
   }
 }
