--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "multer": "0.1.6",
     "passport": "*",
     "passport-github": "*",
-    "cross-env": "^5.0.0"
+    "cross-env": "^5.0.0",
+    "request":"2.27.0",
+    "cheerio":"0.12.3"
   },
   "devDependencies": {
     "cross-env": "^5.0.0"
